mordor/common/xml/parser.d
#line 1 "xml.rl"
/* To compile to .d:
   ragel xml.rl -D -G1 -o parser.d
*/

module mordor.common.xml.parser;

import mordor.common.ragel;
import mordor.common.stringutils;

class XmlParser : RagelParserWithStack
{
private:
    
#line 16 "parser.d"
static const byte[] _xml_parser_actions = [
	0, 1, 0, 1, 1, 1, 2, 1, 
	3, 1, 4, 1, 5, 1, 6, 1, 
	7, 2, 0, 1, 2, 0, 6, 2, 
	2, 5, 2, 3, 7
];

static const int xml_parser_start = 1;
static const int xml_parser_first_final = 212;
static const int xml_parser_error = 0;

static const int xml_parser_en_parse_content = 154;
static const int xml_parser_en_main = 1;

#line 129 "xml.rl"


public:
    this(void delegate(string) startTag,
         void delegate(string) endTag,
         void delegate(string) attribName,
         void delegate(string) attribValue,
         void delegate(string) innerText)
    {
        _startTag = startTag;
        _endTag = endTag;
        _attribName = attribName;
        _attribValue = attribValue;
        _innerText = innerText;
    }

    void init()
    {
        super.init();
        
#line 52 "parser.d"
	{
	cs = xml_parser_start;
	top = 0;
	}
#line 149 "xml.rl"
    }

protected:
    void exec()
    {
        
#line 64 "parser.d"
	{
	byte* _acts;
	uint _nacts;

	if ( p == pe )
		goto _test_eof;
	if ( cs == 0 )
		goto _out;
_resume:
	switch ( cs ) {
case 1:
	switch( (*p) ) {
		case 13u: goto tr0;
		case 32u: goto tr0;
		case 60u: goto tr2;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr0;
	goto tr1;
case 0:
	goto _out;
case 2:
	switch( (*p) ) {
		case 13u: goto tr0;
		case 32u: goto tr0;
		case 60u: goto tr3;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr0;
	goto tr1;
case 3:
	switch( (*p) ) {
		case 33u: goto tr4;
		case 58u: goto tr5;
		case 63u: goto tr6;
		case 95u: goto tr5;
		default: break;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 90u ) {
			if ( 97u <= (*p) && (*p) <= 122u )
				goto tr5;
		} else if ( (*p) >= 65u )
			goto tr5;
	} else if ( (*p) > 214u ) {
		if ( (*p) > 246u ) {
			if ( 248u <= (*p) )
				goto tr5;
		} else if ( (*p) >= 216u )
			goto tr5;
	} else
		goto tr5;
	goto tr1;
case 4:
	switch( (*p) ) {
		case 45u: goto tr7;
		case 68u: goto tr8;
		default: break;
	}
	goto tr1;
case 5:
	if ( (*p) == 45u )
		goto tr9;
	goto tr1;
case 6:
	switch( (*p) ) {
		case 13u: goto tr9;
		case 32u: goto tr9;
		case 45u: goto tr10;
		case 53u: goto tr9;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr9;
	} else if ( (*p) >= 9u )
		goto tr9;
	goto tr1;
case 7:
	switch( (*p) ) {
		case 13u: goto tr9;
		case 32u: goto tr9;
		case 45u: goto tr11;
		case 53u: goto tr9;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr9;
	} else if ( (*p) >= 9u )
		goto tr9;
	goto tr1;
case 8:
	if ( (*p) == 62u )
		goto tr0;
	goto tr1;
case 9:
	if ( (*p) == 79u )
		goto tr12;
	goto tr1;
case 10:
	if ( (*p) == 67u )
		goto tr13;
	goto tr1;
case 11:
	if ( (*p) == 84u )
		goto tr14;
	goto tr1;
case 12:
	if ( (*p) == 89u )
		goto tr15;
	goto tr1;
case 13:
	if ( (*p) == 80u )
		goto tr16;
	goto tr1;
case 14:
	if ( (*p) == 69u )
		goto tr17;
	goto tr1;
case 15:
	switch( (*p) ) {
		case 13u: goto tr18;
		case 32u: goto tr18;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr18;
	goto tr1;
case 16:
	switch( (*p) ) {
		case 13u: goto tr18;
		case 32u: goto tr18;
		case 58u: goto tr19;
		case 95u: goto tr19;
		default: break;
	}
	if ( (*p) < 97u ) {
		if ( (*p) > 10u ) {
			if ( 65u <= (*p) && (*p) <= 90u )
				goto tr19;
		} else if ( (*p) >= 9u )
			goto tr18;
	} else if ( (*p) > 122u ) {
		if ( (*p) < 216u ) {
			if ( 192u <= (*p) && (*p) <= 214u )
				goto tr19;
		} else if ( (*p) > 246u ) {
			if ( 248u <= (*p) )
				goto tr19;
		} else
			goto tr19;
	} else
		goto tr19;
	goto tr1;
case 17:
	switch( (*p) ) {
		case 13u: goto tr20;
		case 32u: goto tr20;
		case 47u: goto tr1;
		case 62u: goto tr21;
		case 91u: goto tr22;
		case 96u: goto tr1;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 59u ) {
		if ( (*p) < 9u ) {
			if ( (*p) <= 8u )
				goto tr1;
		} else if ( (*p) > 10u ) {
			if ( 11u <= (*p) && (*p) <= 44u )
				goto tr1;
		} else
			goto tr20;
	} else if ( (*p) > 64u ) {
		if ( (*p) < 123u ) {
			if ( 92u <= (*p) && (*p) <= 94u )
				goto tr1;
		} else if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr19;
case 18:
	switch( (*p) ) {
		case 13u: goto tr20;
		case 32u: goto tr20;
		case 62u: goto tr21;
		case 80u: goto tr23;
		case 83u: goto tr24;
		case 91u: goto tr22;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr20;
	goto tr1;
case 19:
	switch( (*p) ) {
		case 13u: goto tr21;
		case 32u: goto tr21;
		case 60u: goto tr25;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr21;
	goto tr1;
case 20:
	switch( (*p) ) {
		case 33u: goto tr26;
		case 58u: goto tr5;
		case 63u: goto tr27;
		case 95u: goto tr5;
		default: break;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 90u ) {
			if ( 97u <= (*p) && (*p) <= 122u )
				goto tr5;
		} else if ( (*p) >= 65u )
			goto tr5;
	} else if ( (*p) > 214u ) {
		if ( (*p) > 246u ) {
			if ( 248u <= (*p) )
				goto tr5;
		} else if ( (*p) >= 216u )
			goto tr5;
	} else
		goto tr5;
	goto tr1;
case 21:
	if ( (*p) == 45u )
		goto tr28;
	goto tr1;
case 22:
	if ( (*p) == 45u )
		goto tr29;
	goto tr1;
case 23:
	switch( (*p) ) {
		case 13u: goto tr29;
		case 32u: goto tr29;
		case 45u: goto tr30;
		case 53u: goto tr29;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr29;
	} else if ( (*p) >= 9u )
		goto tr29;
	goto tr1;
case 24:
	switch( (*p) ) {
		case 13u: goto tr29;
		case 32u: goto tr29;
		case 45u: goto tr31;
		case 53u: goto tr29;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr29;
	} else if ( (*p) >= 9u )
		goto tr29;
	goto tr1;
case 25:
	if ( (*p) == 62u )
		goto tr21;
	goto tr1;
case 26:
	switch( (*p) ) {
		case 13u: goto tr32;
		case 32u: goto tr32;
		case 47u: goto tr34;
		case 62u: goto tr35;
		case 96u: goto tr1;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 59u ) {
		if ( (*p) < 9u ) {
			if ( (*p) <= 8u )
				goto tr1;
		} else if ( (*p) > 10u ) {
			if ( 11u <= (*p) && (*p) <= 44u )
				goto tr1;
		} else
			goto tr32;
	} else if ( (*p) > 64u ) {
		if ( (*p) < 123u ) {
			if ( 91u <= (*p) && (*p) <= 94u )
				goto tr1;
		} else if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr33;
case 27:
	switch( (*p) ) {
		case 13u: goto tr36;
		case 32u: goto tr36;
		case 47u: goto tr34;
		case 58u: goto tr37;
		case 62u: goto tr38;
		case 95u: goto tr37;
		default: break;
	}
	if ( (*p) < 97u ) {
		if ( (*p) > 10u ) {
			if ( 65u <= (*p) && (*p) <= 90u )
				goto tr37;
		} else if ( (*p) >= 9u )
			goto tr36;
	} else if ( (*p) > 122u ) {
		if ( (*p) < 216u ) {
			if ( 192u <= (*p) && (*p) <= 214u )
				goto tr37;
		} else if ( (*p) > 246u ) {
			if ( 248u <= (*p) )
				goto tr37;
		} else
			goto tr37;
	} else
		goto tr37;
	goto tr1;
case 28:
	if ( (*p) == 62u )
		goto tr39;
	goto tr1;
case 212:
	switch( (*p) ) {
		case 13u: goto tr39;
		case 32u: goto tr39;
		case 60u: goto tr244;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr39;
	goto tr1;
case 29:
	switch( (*p) ) {
		case 33u: goto tr40;
		case 63u: goto tr41;
		default: break;
	}
	goto tr1;
case 30:
	if ( (*p) == 45u )
		goto tr42;
	goto tr1;
case 31:
	if ( (*p) == 45u )
		goto tr43;
	goto tr1;
case 32:
	switch( (*p) ) {
		case 13u: goto tr43;
		case 32u: goto tr43;
		case 45u: goto tr44;
		case 53u: goto tr43;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr43;
	} else if ( (*p) >= 9u )
		goto tr43;
	goto tr1;
case 33:
	switch( (*p) ) {
		case 13u: goto tr43;
		case 32u: goto tr43;
		case 45u: goto tr34;
		case 53u: goto tr43;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr43;
	} else if ( (*p) >= 9u )
		goto tr43;
	goto tr1;
case 34:
	switch( (*p) ) {
		case 58u: goto tr45;
		case 88u: goto tr46;
		case 95u: goto tr45;
		case 120u: goto tr46;
		default: break;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 90u ) {
			if ( 97u <= (*p) && (*p) <= 122u )
				goto tr45;
		} else if ( (*p) >= 65u )
			goto tr45;
	} else if ( (*p) > 214u ) {
		if ( (*p) > 246u ) {
			if ( 248u <= (*p) )
				goto tr45;
		} else if ( (*p) >= 216u )
			goto tr45;
	} else
		goto tr45;
	goto tr1;
case 35:
	switch( (*p) ) {
		case 13u: goto tr47;
		case 32u: goto tr47;
		case 47u: goto tr1;
		case 63u: goto tr34;
		case 96u: goto tr1;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 59u ) {
		if ( (*p) < 9u ) {
			if ( (*p) <= 8u )
				goto tr1;
		} else if ( (*p) > 10u ) {
			if ( 11u <= (*p) && (*p) <= 44u )
				goto tr1;
		} else
			goto tr47;
	} else if ( (*p) > 64u ) {
		if ( (*p) < 123u ) {
			if ( 91u <= (*p) && (*p) <= 94u )
				goto tr1;
		} else if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr45;
case 36:
	switch( (*p) ) {
		case 13u: goto tr47;
		case 32u: goto tr47;
		case 53u: goto tr47;
		case 63u: goto tr34;
		default: break;
	}
	if ( (*p) > 10u ) {
		if ( 39u <= (*p) && (*p) <= 50u )
			goto tr47;
	} else if ( (*p) >= 9u )
		goto tr47;
	goto tr1;
case 37:
	switch( (*p) ) {
		case 13u: goto tr47;
		case 32u: goto tr47;
		case 47u: goto tr1;
		case 63u: goto tr34;
		case 77u: goto tr48;
		case 96u: goto tr1;
		case 109u: goto tr48;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 59u ) {
		if ( (*p) < 9u ) {
			if ( (*p) <= 8u )
				goto tr1;
		} else if ( (*p) > 10u ) {
			if ( 11u <= (*p) && (*p) <= 44u )
				goto tr1;
		} else
			goto tr47;
	} else if ( (*p) > 64u ) {
		if ( (*p) < 123u ) {
			if ( 91u <= (*p) && (*p) <= 94u )
				goto tr1;
		} else if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr45;
case 38:
	switch( (*p) ) {
		case 13u: goto tr47;
		case 32u: goto tr47;
		case 47u: goto tr1;
		case 63u: goto tr34;
		case 76u: goto tr49;
		case 96u: goto tr1;
		case 108u: goto tr49;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 59u ) {
		if ( (*p) < 9u ) {
			if ( (*p) <= 8u )
				goto tr1;
		} else if ( (*p) > 10u ) {
			if ( 11u <= (*p) && (*p) <= 44u )
				goto tr1;
		} else
			goto tr47;
	} else if ( (*p) > 64u ) {
		if ( (*p) < 123u ) {
			if ( 91u <= (*p) && (*p) <= 94u )
				goto tr1;
		} else if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr45;
case 39:
	switch( (*p) ) {
		case 47u: goto tr1;
		case 96u: goto tr1;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 91u ) {
		if ( (*p) > 44u ) {
			if ( 59u <= (*p) && (*p) <= 64u )
				goto tr1;
		} else
			goto tr1;
	} else if ( (*p) > 94u ) {
		if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else if ( (*p) >= 123u )
			goto tr1;
	} else
		goto tr1;
	goto tr45;
case 40:
	switch( (*p) ) {
		case 13u: goto tr50;
		case 32u: goto tr50;
		case 47u: goto tr1;
		case 61u: goto tr52;
		case 96u: goto tr1;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 59u ) {
		if ( (*p) < 9u ) {
			if ( (*p) <= 8u )
				goto tr1;
		} else if ( (*p) > 10u ) {
			if ( 11u <= (*p) && (*p) <= 44u )
				goto tr1;
		} else
			goto tr50;
	} else if ( (*p) > 64u ) {
		if ( (*p) < 123u ) {
			if ( 91u <= (*p) && (*p) <= 94u )
				goto tr1;
		} else if ( (*p) > 182u ) {
			if ( 184u <= (*p) && (*p) <= 191u )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr51;
case 41:
	switch( (*p) ) {
		case 13u: goto tr53;
		case 32u: goto tr53;
		case 61u: goto tr54;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr53;
	goto tr1;
case 42:
	switch( (*p) ) {
		case 13u: goto tr54;
		case 32u: goto tr54;
		case 34u: goto tr55;
		case 39u: goto tr56;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr54;
	goto tr1;
case 43:
	switch( (*p) ) {
		case 34u: goto tr58;
		case 38u: goto tr59;
		case 60u: goto tr1;
		default: break;
	}
	goto tr57;
case 44:
	switch( (*p) ) {
		case 34u: goto tr61;
		case 38u: goto tr62;
		case 60u: goto tr1;
		default: break;
	}
	goto tr60;
case 45:
	switch( (*p) ) {
		case 13u: goto tr36;
		case 32u: goto tr36;
		case 47u: goto tr34;
		case 62u: goto tr38;
		default: break;
	}
	if ( 9u <= (*p) && (*p) <= 10u )
		goto tr36;
	goto tr1;
case 46:
	switch( (*p) ) {
		case 35u: goto tr63;
		case 58u: goto tr64;
		case 95u: goto tr64;
		default: break;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 90u ) {
			if ( 97u <= (*p) && (*p) <= 122u )
				goto tr64;
		} else if ( (*p) >= 65u )
			goto tr64;
	} else if ( (*p) > 214u ) {
		if ( (*p) > 246u ) {
			if ( 248u <= (*p) )
				goto tr64;
		} else if ( (*p) >= 216u )
			goto tr64;
	} else
		goto tr64;
	goto tr1;
case 47:
	if ( (*p) == 120u )
		goto tr66;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto tr65;
	goto tr1;
case 48:
	if ( (*p) == 59u )
		goto tr60;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto tr65;
	goto tr1;
case 49:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr67;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto tr67;
	} else
		goto tr67;
	goto tr1;
case 50:
	if ( (*p) == 59u )
		goto tr60;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr67;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto tr67;
	} else
		goto tr67;
	goto tr1;
case 51:
	switch( (*p) ) {
		case 47u: goto tr1;
		case 59u: goto tr60;
		case 96u: goto tr1;
		case 215u: goto tr1;
		case 247u: goto tr1;
		default: break;
	}
	if ( (*p) < 91u ) {
		if ( (*p) > 44u ) {
